--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
         <div class="download-section">
           <h2 class="section-title">Download QuickTube</h2>
           <p style="color: var(--text-secondary); font-size: 18px">
-            Choose your platform and start downloading in seconds
+            Choose your platform and start downloading in seconds.
           </p>
 
           <div class="download-buttons">
