add playlist support to landing page

--- a/index.html
+++ b/index.html
@@ -593,7 +593,9 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="container">
-        <h1>The Fastest Way to Download<br />YouTube Videos & Audio</h1>
+        <h1>
+          The Fastest Way to Download<br />YouTube Videos, Audio & Playlists
+        </h1>
         <p class="subtitle">
           No installation. No Python. No dependencies. Just download & run.
         </p>
@@ -657,6 +659,14 @@
         <h2 class="section-title">Powerful Features</h2>
         <div class="features">
           <div class="feature">
+            <div class="feature-icon">📋</div>
+            <h3>Full Playlist Downloads</h3>
+            <p>
+              Download entire YouTube playlists with a single command - no
+              limits!
+            </p>
+          </div>
+          <div class="feature">
             <div class="feature-icon">🎬</div>
             <h3>MP4 Video Downloads</h3>
             <p>Download videos in 360p, 720p, or 1080p quality</p>
@@ -665,11 +675,6 @@
             <div class="feature-icon">🎵</div>
             <h3>MP3 Audio Extraction</h3>
             <p>Extract audio at 50, 128, or 192 kbps bitrate</p>
-          </div>
-          <div class="feature">
-            <div class="feature-icon">📋</div>
-            <h3>Playlist Support</h3>
-            <p>Download entire playlists or individual videos</p>
           </div>
           <div class="feature">
             <div class="feature-icon">⚡</div>
@@ -779,6 +784,9 @@
         <h2 class="section-title">Why QuickTube?</h2>
         <div class="why-list">
           <div class="why-item">
+            <span>Download entire playlists instantly</span>
+          </div>
+          <div class="why-item">
             <span>Faster than browser-based tools</span>
           </div>
           <div class="why-item">
@@ -788,7 +796,7 @@
             <span>No ads or annoying popups</span>
           </div>
           <div class="why-item">
-            <span>No download limits</span>
+            <span>No download limits or restrictions</span>
           </div>
           <div class="why-item">
             <span>Works offline after download</span>
@@ -806,7 +814,7 @@
         <div class="download-section">
           <h2 class="section-title">Download QuickTube</h2>
           <p style="color: var(--text-secondary); font-size: 18px">
-            Choose your platform and start downloading in seconds.
+            Choose your platform and start downloading in seconds
           </p>
 
           <div class="download-buttons">
@@ -861,8 +869,8 @@
           </div>
 
           <div class="download-features">
+            <div class="download-feature">Full Playlist Support</div>
             <div class="download-feature">No dependencies</div>
-            <div class="download-feature">MIT License</div>
             <div class="download-feature">Free & Open Source</div>
           </div>
         </div>
