handle mac applications

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
       }
 
       .platform-pill {
-        
         display: inline-flex;
         align-items: center;
         gap: 0.6em;
@@ -151,7 +150,8 @@
       .platform-icon {
         width: 24px;
         height: 24px;
-        filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.4)) brightness(0) invert(1);
+        filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.4)) brightness(0)
+          invert(1);
       }
 
       /* Header */
@@ -926,7 +926,7 @@
               </div>
             </a>
             <a
-              href="https://github.com/abdelrahman-ahmed-nassar/QuickTube-Youtube-Downloader/releases/latest/download/quicktube-macos"
+              href="https://github.com/abdelrahman-ahmed-nassar/QuickTube-Youtube-Downloader/releases/latest/download/quicktube-macos.zip"
               class="download-btn"
             >
               <div class="os-icon">
@@ -940,7 +940,7 @@
                   margin-top: 5px;
                 "
               >
-                quicktube-macos
+                quicktube-macos.zip
               </div>
             </a>
             <a
@@ -1030,6 +1030,16 @@
             <p>
               Nope! QuickTube is a single executable file. Just download and
               run. No installation, no Python, no dependencies needed.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>macOS says "QuickTube.app can't be opened" - is it safe?</h3>
+            <p>
+              Yes, it's completely safe! This warning appears because the app
+              isn't signed with an Apple Developer certificate (costs $99/year).
+              To open it: Right-click QuickTube.app → "Open" → "Open" again. You
+              only need to do this once. The app is open source, so you can
+              review the code yourself.
             </p>
           </div>
           <div class="faq-item">
