make the mac app terminal based instead of windowed

--- a/index.html
+++ b/index.html
@@ -942,6 +942,21 @@
               >
                 quicktube-macos.zip
               </div>
+              <div
+                style="
+                  font-size: 12px;
+                  color: var(--text-secondary);
+                  margin-top: 10px;
+                  padding-top: 10px;
+                  border-top: 1px solid rgba(255, 255, 255, 0.1);
+                  line-height: 1.5;
+                "
+              >
+                🔐 <strong>First run:</strong> Right-click → "Open" → "Open"<br />
+                <em>Or:</em> System Settings → Privacy & Security → "Allow
+                Anyway"<br />
+                (Only needed once)
+              </div>
             </a>
             <a
               href="https://github.com/abdelrahman-ahmed-nassar/QuickTube-Youtube-Downloader/releases/latest/download/quicktube-linux"
