update the macos required steps

--- a/index.html
+++ b/index.html
@@ -952,8 +952,8 @@
                   line-height: 1.5;
                 "
               >
-                🔐 <strong>First run:</strong> Right-click → "Open" → "Open"<br />
-                <em>Or:</em> System Settings → Privacy & Security → "Allow
+                🔐 <strong>First run:</strong> Right-click → "Open"<br />
+                <em>Then:</em> System Settings → Privacy & Security → "Allow
                 Anyway"<br />
                 (Only needed once)
               </div>
