handle open graph image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       content="Download YouTube videos and audio instantly. No installation, no dependencies, just download and run."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/opengraph-image.png" />
+    <meta
+      property="og:image"
+      content="https://abdelrahman-ahmed-nassar.github.io/QuickTube-Youtube-Downloader/assets/opengraph-image.png"
+    />
     <meta
       property="og:url"
       content="https://abdelrahman-ahmed-nassar.github.io/QuickTube-Youtube-Downloader/"
@@ -42,7 +45,10 @@
       name="twitter:description"
       content="Download YouTube videos and audio instantly. No installation, no dependencies, just download and run."
     />
-    <meta name="twitter:image" content="assets/opengraph-image.png" />
+    <meta
+      name="twitter:image"
+      content="https://abdelrahman-ahmed-nassar.github.io/QuickTube-Youtube-Downloader/assets/opengraph-image.png"
+    />
 
     <title>QuickTube - Fast YouTube Video & Audio Downloader</title>
     <style>
